fix alignment issue

--- a/styles.scss
+++ b/styles.scss
@@ -41,19 +41,21 @@ body {
   font-family: boogalooregular;
   color: white;
   margin-top: 15rem;
+  display: grid;
+  justify-content: center;
 }
 .mainWeather {
   display: flex;
   justify-content: center;
-  gap: 60px;
-  align-content: end;
+  gap: 1rem;
 }
 p.weather {
-  grid-column: 2 / 3;
   place-self: center;
+  position: relative;
+  left: 1rem;
 }
 .weather, .temp.now {
-  font-size: 3rem;
+  font-size: 4rem;
   margin: 0.6rem;
 }
 .place, .feel, .hl, .today {
@@ -86,8 +88,7 @@ p.weather {
 }
 .temps {
   display: flex;
-  justify-content: center;
-  gap: 25px;
+  gap: 30px;
 }
 p.temp.now {
   font-size: 6rem;
@@ -113,7 +114,6 @@ button.convertTemp {
 }
 .timeNPlace {
   display: flex;
-  /* place-content: center; */
   gap: 20px;
   justify-content: center;
   align-items: center;
@@ -178,9 +178,3 @@ svg.feather.feather-github {
   position: relative;
   top: 6px;
 }
-
-/*
-html, body {
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
-} */
